- Set download link as homepage

--- a/API/views/index.jade
+++ b/API/views/index.jade
@@ -4,23 +4,8 @@ block content
   h1= title
   p Welcome to #{title}
 
-  h2 Users
-  ul
-    li
-      a(href='/editUser') Edit Current User
-    li
-      a(href='/deleteUser') Delete Current User
-
-  h2 Hunts 
-  ul 
-    li
-      a(href='/newHunt') Create New Hunt
-
-
-  h2 Friends
-  ul
-    li 
-      a(href='/addFriend') Send New Friend Request
+  h2 To open app, open Expo app and scan QR Code on the page located at the link below.
+  a(href=' https://expo.dev/@jr550/App?serviceType=classic&distribution=expo-go') QR Code
 
   
 
