- updated url for published app

--- a/API/views/index.jade
+++ b/API/views/index.jade
@@ -4,8 +4,8 @@ block content
   h1= title
   p Welcome to #{title}
 
-  h2 To open app, open Expo app and scan QR Code on the page located at the link below.
-  a(href=' https://expo.dev/@jr550/App?serviceType=classic&distribution=expo-go') QR Code
+  h2 To open app, open Expo Go app and scan QR Code on the page located at the link below.
+  a(href='https://expo.dev/@jr550/Lookout_Scavenger_Hunt_App?serviceType=classic&distribution=expo-go') QR Code
 
   
 
