--- a/API/views/layout.jade
+++ b/API/views/layout.jade
@@ -1,7 +1,8 @@
 doctype html
 html 
     head 
-        title= title 
+        title="Lookout! Scavenger Hunt App" 
+        link(rel='icon', href='images/icon.png')
         link(rel='stylesheet', href='/stylesheets/style.css')
     body 
         block content
